--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 
         </div>
       </div>
+
       <div class="container">
         <div class="resume__block">
           <div class="intro">
@@ -109,6 +110,7 @@
           </div>
         </div>
       </div>
+
       <div class="container">
         <div class="resume__block">
           <div class="skills">
@@ -118,6 +120,16 @@
         </div>
       </div>
 
+      <div class="container">
+        <div class="resume__block">
+          <div class="main-info fh">
+
+            <div class="experiences"></div>
+
+            <div class="additional-info fv"></div>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
 </body>
