--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
     <div class="resume">
       <div class="container">
         <div class="resume__block">
-          <h1 class="contact-info__header">Bulka</h1>
-          <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
-
+          <h1 class="contact-info__header">Mykhailo Bondarenko</h1>
+          <h3 class="contact-info__sub-header">Junior Front-end Developer</h3>
           <div class="contact_info_container fh">
             <div class="contact-info__block">
-              <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author" class="contact-info__item">
+              <a href="#" rel="author" class="contact-info__item">
                 <div class="contact-info__item-icon-wrapper">
                   <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                     <path
@@ -26,9 +25,10 @@
                     </path>
                   </svg>
                 </div>
-                <span>I'm older than you</span>
+                <span>Day of birthday 08.01.1992</span>
               </a>
-              <a href="#" rel="author" class="contact-info__item">
+              <a href="https://www.google.com/maps/place/%D0%A5%D0%B0%D1%80%D1%8C%D0%BA%D0%BE%D0%B2,+%D0%A5%D0%B0%D1%80%D1%8C%D0%BA%D0%BE%D0%B2%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C/@49.994507,36.145742,11z/data=!3m1!4b1!4m5!3m4!1s0x4127a09f63ab0f8b:0x2d4c18681aa4be0a!8m2!3d49.9935!4d36.230383"
+                rel="author" class="contact-info__item">
                 <div class="contact-info__item-icon-wrapper">
                   <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
                     <path
@@ -36,9 +36,9 @@
                     </path>
                   </svg>
                 </div>
-                <span>Lviv, Ukraine</span>
+                <span>Kharkiv, Ukraine</span>
               </a>
-              <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author" class="contact-info__item">
+              <a href="https://www.linkedin.com/in/mykhailobondarenko/" rel="author" class="contact-info__item">
                 <div class="contact-info__item-icon-wrapper">
                   <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                     <path
@@ -46,26 +46,24 @@
                     </path>
                   </svg>
                 </div>
-                <span>binary-studio</span>
+                <span>Linkedin</span>
               </a>
             </div>
-
             <div class="contact-info__block contact-info__block--center">
-              <img class="contact-info__avatar" src="assets/avatar.png" alt="Avatar">
+              <img class="contact-info__avatar" src="assets/foto.jpg" alt="Avatar">
             </div>
-
             <div class="contact-info__block">
-              <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author" class="contact-info__item">
+              <a href="mailto:mikhailzyagun@gmail.com" rel="author" class="contact-info__item">
                 <div class="contact-info__item-icon-wrapper">
                   <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                     <path
-                      d="M464 64C490.5 64 512 85.49 512 112C512 127.1 504.9 141.3 492.8 150.4L275.2 313.6C263.8 322.1 248.2 322.1 236.8 313.6L19.2 150.4C7.113 141.3 0 127.1 0 112C0 85.49 21.49 64 48 64H464zM217.6 339.2C240.4 356.3 271.6 356.3 294.4 339.2L512 176V384C512 419.3 483.3 448 448 448H64C28.65 448 0 419.3 0 384V176L217.6 339.2z">
+                      d="M384 32H64C28.63 32 0 60.63 0 96v320c0 35.38 28.62 64 64 64h320c35.38 0 64-28.62 64-64V96C448 60.63 419.4 32 384 32zM384 336c0 17.67-14.33 32-32 32H96c-17.67 0-32-14.33-32-32V225.9l138.5 69.27C209.3 298.5 216.6 300.2 224 300.2s14.75-1.688 21.47-5.047L384 225.9V336zM384 190.1l-152.8 76.42c-4.5 2.25-9.812 2.25-14.31 0L64 190.1V176c0-17.67 14.33-32 32-32h256c17.67 0 32 14.33 32 32V190.1z">
                     </path>
                   </svg>
                 </div>
-                <span>ask@binary-studio.com</span>
+                <span>mikhailzyagun@gmail.com</span>
               </a>
-              <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author" class="contact-info__item">
+              <a href="tel:+380960040612" rel="author" class="contact-info__item">
                 <div class="contact-info__item-icon-wrapper">
                   <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                     <path
@@ -73,25 +71,22 @@
                     </path>
                   </svg>
                 </div>
-                <span>+380 32 231 64 54</span>
+                <span>+38 096 00 40 612</span>
               </a>
-              <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author" class="contact-info__item">
+              <a href="https://github.com/Mykhailo-Bondarenko" rel="author" class="contact-info__item">
                 <div class="contact-info__item-icon-wrapper">
                   <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                     <path
-                      d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z">
+                      d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z">
                     </path>
                   </svg>
                 </div>
-                <span>binary-studio-cat</span>
+                <span>GitHub</span>
               </a>
-
             </div>
           </div>
-
         </div>
       </div>
-
       <div class="container">
         <div class="resume__block">
           <div class="intro">
@@ -102,70 +97,92 @@
                 </path>
               </svg>
             </div>
-            <p class="intro_text">Meow.
-              I am a Binary Studio cat. Still got 7 lives. Work in IT, Full Stack Evil,
-              all I do is sleep and try to help out hoomans with their projects whenever
-              they need me.
+            <p class="intro_text">I am a Front-End developer looking for a full-time position in a company that's aimed
+              at making both everyday life and business easier, more productive and user-friendly. I have knowledge of
+              HTML, CSS, basic JavaScript. I am a fast learner, responsible, and ready challenging tasks. I strive to
+              consolidate my knowledge of JavaScript and learn React.
             </p>
           </div>
         </div>
       </div>
-
       <div class="container">
         <div class="resume__block">
           <div class="skills">
             <h3 class="skills__header">Skills</h3>
-            <p class="skills__text">Sleep, eat, more sleep, meow, mrrr, purr. </p>
+            <p class="skills__text">CSS, SASS, HTML5, JavaScript, Git, basic REST API,
+              basic TypeScript, Figma</p>
           </div>
         </div>
       </div>
-
       <div class="container">
         <div class="resume__block">
           <div class="main-info fh">
-
             <div class="experiences">
               <h3 class="experiences__header">Experience</h3>
               <div class="experiences__company">
                 <div class="experiences__company-header">
-                  <span class="experiences__company-header-durability">For whole my life</span>
-                  <h3 class="experiences__company-header-name">BinaryStudio</h3>
+                  <span class="experiences__company-header-durability">April 2018 - August 2021</span>
+                  <h3 class="experiences__company-header-name">FACTORY SOAP TRADITIONS</h3>
                 </div>
-
                 <div class="experiences__company-project">
-                  <span class="experiences__company-project-role">Binary Studio Cat</span>
-                  <h3 class="experiences__company-project-name">Hooman project</h3>
+                  <span class="experiences__company-project-role">Loader</span>
+                  <h3 class="experiences__company-project-name">Responsibilities</h3>
                   <ul class="experiences__company-project-responsibilities">
-                    <li>Supported hoomans</li>
-                    <li>Slept all the time</li>
-                    <li>Lied on the keyboard</li>
-                    <li>Watched my hoomans working</li>
+                    <li>Ensuring the integrity and preservation of the <br> material assets in the warehouse</li>
+                    <li>Visually inspected all pallets for deliveries to verify <br> quality and accuracy of shipments
+                    </li>
+                    <li>Installed protective devices to prevent shifting or <br> damage to items being transferred</li>
+                    <li>Arranging goods according to customer requests, <br> packaging, inventory</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="experiences__company">
+                <div class="experiences__company-header">
+                  <span class="experiences__company-header-durability">March 2015 - December 2017</span>
+                  <h3 class="experiences__company-header-name">Sweetdream Hostel</h3>
+                </div>
+                <div class="experiences__company-project">
+                  <span class="experiences__company-project-role">Administrator</span>
+                  <h3 class="experiences__company-project-name">Responsibilities</h3>
+                  <ul class="experiences__company-project-responsibilities">
+                    <li>Entered and maintained departmental records in company database</li>
+                    <li>Communication with guests and potential customers</li>
+                    <li>In-check, accommodation, and check-out</li>
+                    <li>Hotel staff organization and room reservations</li>
                   </ul>
                 </div>
               </div>
             </div>
-
             <div class="additional-info fv">
-              <div class="additional-info__education">
-                <h3 class="additional-info__education-header">Education</h3>
-                <div class="additional-info__education-university">
-                  <span class="additional-info__education-university-durability">2021</span>
-                  <h3 class="additional-info__education-university-speciality">Cat track</h3>
-                  <p class="additional-info__education-university-name">Binary Studio Academy</p>
-                </div>
-              </div>
-
               <div class="additional-info__languages">
                 <h3 class="additional-info__languages-header">Languages</h3>
                 <p class="additional-info__languages-item">
-                  Meow dialect
+                  <a href="https://www.efset.org/cert/YnuCZZ" target="_blank" class="contact-info__item">English
+                    Intermediate (Efset)</a>
                 </p>
                 <p class="additional-info__languages-item">
-                  Ukrainian (understand)
+                  Ukrainian fluent
                 </p>
                 <p class="additional-info__languages-item">
-                  English (don't understand)
+                  Russian fluent
                 </p>
+              </div>
+              <div class="additional-info__languages">
+                <h3 class="additional-info__languages-header">Hobbies</h3>
+                <p class="additional-info__languages-item">Сycling</p>
+                <p class="additional-info__languages-item">Photography</p>
+                <p class="additional-info__languages-item">Travelling</p>
+                <p class="additional-info__languages-item">Сhess</p>
+              </div>
+              <div class="additional-info__education">
+                <h3 class="additional-info__education-header">Education</h3>
+                <div class="additional-info__education-university">
+                  <span class="additional-info__education-university-durability">September 2010 - May 2012</span>
+                  <h3 class="additional-info__education-university-speciality">Chemical Technologies And Engineering
+                  </h3>
+                  <p class="additional-info__education-university-name">National Technical University
+                    «Kharkiv Polytechnic Institute»</p>
+                </div>
               </div>
             </div>
           </div>
